--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "otp-generator": "^4.0.1",
-    "socket.io": "^4.8.3",
-    "twilio": "^5.12.0"
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
